variables.RunFour.scala.error
Erreur de compilation :
RunFour:1: error: too many arguments for method estSurBiscuit: ()Boolean
while (!estSurBiscuit(4)) {
                     ^